bugfix visibility

--- a/themes/circle/scss/components/_sliders.scss
+++ b/themes/circle/scss/components/_sliders.scss
@@ -33,6 +33,7 @@
     top: 50%;
     transform: translateY(-50%);
     background: $white;
+    z-index: 10;
 
     &:hover{
       background: $white;
